fix: mobile footer alignment

--- a/src/containers/NewFooter/NewFooter-mobile.scss
+++ b/src/containers/NewFooter/NewFooter-mobile.scss
@@ -24,7 +24,6 @@
       width: 40%;
       min-width: 150px;
       margin-bottom: 30px;
-      margin-right: 20px;
       display: flex;
       flex-direction: column;
     }
